# inter-services-communication

./: Cargo.toml  README.md  build.rs
src/: server.rs
