[package]
name = "inter-services-communication"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "server-hw"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "client-hw"
path = "src/client.rs"

[dependencies]
tonic = "0.12.3"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "*"